翻译（50%） 1_dqn_tutorial.ipynb

--- a/docs/tutorials/1_dqn_tutorial.ipynb
+++ b/docs/tutorials/1_dqn_tutorial.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Supra-CN/agents/blob/master/docs/tutorials/1_dqn_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "klGNgWREsvQv"
       },
       "source": [
@@ -13,7 +23,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "nQnmcm0oI1Q-"
       },
       "outputs": [],
@@ -39,26 +48,26 @@
       "source": [
         "# Train a Deep Q Network with TF-Agents\n",
         "\n",
-        "\u003ctable class=\"tfo-notebook-buttons\" align=\"left\"\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://www.tensorflow.org/agents/tutorials/1_dqn_tutorial\"\u003e\n",
-        "    \u003cimg src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" /\u003e\n",
-        "    View on TensorFlow.org\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/agents/blob/master/docs/tutorials/1_dqn_tutorial.ipynb\"\u003e\n",
-        "    \u003cimg src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" /\u003e\n",
-        "    Run in Google Colab\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca target=\"_blank\" href=\"https://github.com/tensorflow/agents/blob/master/docs/tutorials/1_dqn_tutorial.ipynb\"\u003e\n",
-        "    \u003cimg src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" /\u003e\n",
-        "    View source on GitHub\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "  \u003ctd\u003e\n",
-        "    \u003ca href=\"https://storage.googleapis.com/tensorflow_docs/agents/docs/tutorials/1_dqn_tutorial.ipynb\"\u003e\u003cimg src=\"https://www.tensorflow.org/images/download_logo_32px.png\" /\u003eDownload notebook\u003c/a\u003e\n",
-        "  \u003c/td\u003e\n",
-        "\u003c/table\u003e"
+        "<table class=\"tfo-notebook-buttons\" align=\"left\">\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://www.tensorflow.org/agents/tutorials/1_dqn_tutorial\">\n",
+        "    <img src=\"https://www.tensorflow.org/images/tf_logo_32px.png\" />\n",
+        "    View on TensorFlow.org</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://colab.research.google.com/github/tensorflow/agents/blob/master/docs/tutorials/1_dqn_tutorial.ipynb\">\n",
+        "    <img src=\"https://www.tensorflow.org/images/colab_logo_32px.png\" />\n",
+        "    Run in Google Colab</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a target=\"_blank\" href=\"https://github.com/tensorflow/agents/blob/master/docs/tutorials/1_dqn_tutorial.ipynb\">\n",
+        "    <img src=\"https://www.tensorflow.org/images/GitHub-Mark-32px.png\" />\n",
+        "    View source on GitHub</a>\n",
+        "  </td>\n",
+        "  <td>\n",
+        "    <a href=\"https://storage.googleapis.com/tensorflow_docs/agents/docs/tutorials/1_dqn_tutorial.ipynb\"><img src=\"https://www.tensorflow.org/images/download_logo_32px.png\" />Download notebook</a>\n",
+        "  </td>\n",
+        "</table>"
       ]
     },
     {
@@ -77,13 +86,16 @@
       },
       "source": [
         "This example shows how to train a [DQN (Deep Q Networks)](https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf)  agent on the Cartpole environment using the TF-Agents library.\n",
+        "> 这个例子展示了如何使用 TF-Agents 库在 Cartpole 环境中训练一个 [DQN (Deep Q Networks)](https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf)  智能体。\n",
         "\n",
         "![Cartpole environment](https://raw.githubusercontent.com/tensorflow/agents/master/docs/tutorials/images/cartpole.png)\n",
         "\n",
         "It will walk you through all the components in a Reinforcement Learning (RL) pipeline for training, evaluation and data collection.\n",
+        "> 这将带您了解强化学习 (RL) 的训练、评估和数据收集流程中的所有构成部分。\n",
         "\n",
         "\n",
-        "To run this code live, click the 'Run in Google Colab' link above.\n"
+        "To run this code live, click the 'Run in Google Colab' link above.\n",
+        "> 点击上方'Run in Google Colab'链接，可实时运行本代码"
       ]
     },
     {
@@ -101,7 +113,8 @@
         "id": "kNrNXKI7bINP"
       },
       "source": [
-        "If you haven't installed the following dependencies, run:"
+        "If you haven't installed the following dependencies, run:\n",
+        "> 如果你还没有安装下列依赖，请执行："
       ]
     },
     {
@@ -167,6 +180,7 @@
       "outputs": [],
       "source": [
         "# Set up a virtual display for rendering OpenAI gym environments.\n",
+        "# 设置一个用于渲染 OpenAI gym 环境的虚拟器\n",
         "display = pyvirtualdisplay.Display(visible=0, size=(1400, 900)).start()"
       ]
     },
@@ -187,7 +201,7 @@
         "id": "LmC0NDhdLIKY"
       },
       "source": [
-        "## Hyperparameters"
+        "## Hyperparameters （超参数集）"
       ]
     },
     {
@@ -218,11 +232,13 @@
         "id": "VMsJC3DEgI0x"
       },
       "source": [
-        "## Environment\n",
+        "## Environment（环境）\n",
         "\n",
         "In Reinforcement Learning (RL), an environment represents the task or problem to be solved. Standard environments can be created in TF-Agents using `tf_agents.environments` suites. TF-Agents has suites for loading environments from sources such as the OpenAI Gym, Atari, and DM Control.\n",
+        "> 在强化学习「Reinforcement Learning (RL)」中，「环境」代表「需要完成的任务」或「需要解决的问题问题」\n",
         "\n",
-        "Load the CartPole environment from the OpenAI Gym suite. "
+        "Load the CartPole environment from the OpenAI Gym suite. \n",
+        "> 从 OpenAI Gym 套件中加载 CartPole 环境"
       ]
     },
     {
@@ -243,7 +259,8 @@
         "id": "IIHYVBkuvPNw"
       },
       "source": [
-        "You can render this environment to see how it looks. A free-swinging pole is attached to a cart.  The goal is to move the cart right or left in order to keep the pole pointing up."
+        "You can render this environment to see how it looks. A free-swinging pole is attached to a cart.  The goal is to move the cart right or left in order to keep the pole pointing up.\n",
+        "> 你可以渲染这个环境看一下，一个自由摆动的杆子连接到一个小推车上。目标是通过左右移动小推车，使杆子保持朝上。"
       ]
     },
     {
@@ -266,8 +283,10 @@
       },
       "source": [
         "The `environment.step` method takes an `action` in the environment and returns a `TimeStep` tuple containing the next observation of the environment and the reward for the action.\n",
+        "> `environment.step` 方法在环境中选取一个动作 `action` 并返回一个 `TimeStep` 元组，其中包含对环境的下一次观察和该动作的奖励。\n",
         "\n",
-        "The `time_step_spec()` method returns the specification for the `TimeStep` tuple. Its `observation` attribute shows the shape of observations, the data types, and the ranges of allowed values. The `reward` attribute shows the same details for the reward.\n"
+        "The `time_step_spec()` method returns the specification for the `TimeStep` tuple. Its `observation` attribute shows the shape of observations, the data types, and the ranges of allowed values. The `reward` attribute shows the same details for the reward.\n",
+        "> `time_step_spec()` 方法返回 `TimeStep` 元组的规范说明。它的可观察对象属性`observation`显示可观察对象的形状、数据类型和允许的取值范围。 `reward` 属性显示相同的奖励详细信息。\n"
       ]
     },
     {
@@ -278,7 +297,7 @@
       },
       "outputs": [],
       "source": [
-        "print('Observation Spec:')\n",
+        "print('Observation Spec:（可观测对象的规范）')\n",
         "print(env.time_step_spec().observation)"
       ]
     },
@@ -290,7 +309,7 @@
       },
       "outputs": [],
       "source": [
-        "print('Reward Spec:')\n",
+        "print('Reward Spec:（奖励对象的规范）')\n",
         "print(env.time_step_spec().reward)"
       ]
     },
@@ -300,7 +319,8 @@
         "id": "b_lHcIcqUaqB"
       },
       "source": [
-        "The `action_spec()` method returns the shape, data types, and allowed values of valid actions."
+        "The `action_spec()` method returns the shape, data types, and allowed values of valid actions.\n",
+        "> `action_spec()` 方法返回有效操作的形状、数据类型和允许值。"
       ]
     },
     {
@@ -329,7 +349,17 @@
         "-   `reward` is a scalar float value\n",
         "-   `action` is a scalar integer with only two possible values:\n",
         "    -   `0` — \"move left\"\n",
-        "    -   `1` — \"move right\"\n"
+        "    -   `1` — \"move right\"\n",
+        "\n",
+        "> 在 Cartpole 环境中:\n",
+        ">\n",
+        "> -   `observation` 可观测对象，是包含 4 个 浮点数的数组: \n",
+        ">    -   小推车的「位置」和「速度」\n",
+        ">    -   杆子的「角位置」和「角速度」 \n",
+        "> -   `reward` 奖励对象，是标量浮点值\n",
+        "> -   `action` 动作对象，是只有两个可能值的标量整数:\n",
+        ">    -   `0` — \"向左移动\"\n",
+        ">    -   `1` — \"向右移动\"\n"
       ]
     },
     {
@@ -357,7 +387,8 @@
         "id": "4JSc9GviWUBK"
       },
       "source": [
-        "Usually two environments are instantiated: one for training and one for evaluation. "
+        "Usually two environments are instantiated: one for training and one for evaluation. \n",
+        "> 通常会实例化两个环境：一个用于训练，一个用于评估。"
       ]
     },
     {
@@ -379,8 +410,10 @@
       },
       "source": [
         "The Cartpole environment, like most environments, is written in pure Python. This is converted to TensorFlow using the `TFPyEnvironment` wrapper.\n",
+        "> 与大多数环境一样，Cartpole 环境是用纯 Python 编写的。使用 `TFPyEnvironment` 包装器将其转换为 `TensorFlow`。\n",
         "\n",
-        "The original environment's API uses Numpy arrays. The `TFPyEnvironment` converts these to `Tensors` to make it compatible with Tensorflow agents and policies.\n"
+        "The original environment's API uses Numpy arrays. The `TFPyEnvironment` converts these to `Tensors` to make it compatible with Tensorflow agents and policies.\n",
+        "> 原始环境的 API 使用 Numpy 数组。 `TFPyEnvironment` 将这些转换为张量 `Tensors`，使其与 Tensorflow 代理和策略兼容。\n"
       ]
     },
     {
@@ -401,7 +434,7 @@
         "id": "E9lW_OZYFR8A"
       },
       "source": [
-        "## Agent\n",
+        "## Agent（智能体）\n",
         "\n",
         "The algorithm used to solve an RL problem is represented by an `Agent`. TF-Agents provides standard implementations of a variety of `Agents`, including:\n",
         "\n",
@@ -412,11 +445,23 @@
         "-   [PPO](https://arxiv.org/abs/1707.06347)\n",
         "-   [SAC](https://arxiv.org/abs/1801.01290)\n",
         "\n",
+        "> 智能体 `Agent` 表示用于解决 RL 问题的算法。 TF-Agents 提供各种智能体 `Agent` 的标准实现，包括：\n",
+        ">\n",
+        "> -   [DQN](https://storage.googleapis.com/deepmind-media/dqn/DQNNaturePaper.pdf) (用于本教程)\n",
+        "> -   [REINFORCE](https://www-anw.cs.umass.edu/~barto/courses/cs687/williams92simple.pdf)\n",
+        "> -   [DDPG](https://arxiv.org/pdf/1509.02971.pdf)\n",
+        "> -   [TD3](https://arxiv.org/pdf/1802.09477.pdf)\n",
+        "> -   [PPO](https://arxiv.org/abs/1707.06347)\n",
+        "> -   [SAC](https://arxiv.org/abs/1801.01290)\n",
+        "\n",
         "The DQN agent can be used in any environment which has a discrete action space.\n",
+        "> DQN 智能体可用于任何具备离散操作空间的环境中\n",
         "\n",
         "At the heart of a DQN Agent is a `QNetwork`, a neural network model that can learn to predict `QValues` (expected returns) for all actions, given an observation from the environment.\n",
+        "> DQN 智能体的核心是Q网络 `QNetwork`，这是一种可以在给定环境中根据所有的动作来学习和预测其 `QValues` （预期回报）的神经网络。\n",
         "\n",
-        "We will use `tf_agents.networks.` to create a `QNetwork`. The network will consist of a sequence of `tf.keras.layers.Dense` layers, where the final layer will have 1 output for each possible action."
+        "We will use `tf_agents.networks.` to create a `QNetwork`. The network will consist of a sequence of `tf.keras.layers.Dense` layers, where the final layer will have 1 output for each possible action.\n",
+        "> 我们将使用 `tf_agents.networks.` 来创建一个 `QNetwork`. 该网络将由一系列 `tf.keras.layers.Dense` 层组成，其中最后一层将为每个可能的动作提供 1 个输出。"
       ]
     },
     {
@@ -433,6 +478,7 @@
         "\n",
         "# Define a helper function to create Dense layers configured with the right\n",
         "# activation and kernel initializer.\n",
+        "# 定义一个辅助函数来创建配置了正确激活和内核初始化器的 Dense layers\n",
         "def dense_layer(num_units):\n",
         "  return tf.keras.layers.Dense(\n",
         "      num_units,\n",
@@ -443,6 +489,8 @@
         "# QNetwork consists of a sequence of Dense layers followed by a dense layer\n",
         "# with `num_actions` units to generate one q_value per available action as\n",
         "# its output.\n",
+        "# QNetwork 由一系列 Dense layers 组成，紧接着是一个带有 `num_actions` 单元的密集层，\n",
+        "# 为每个可用动作生成一个 q_value 作为其输出\n",
         "dense_layers = [dense_layer(num_units) for num_units in fc_layer_params]\n",
         "q_values_layer = tf.keras.layers.Dense(\n",
         "    num_actions,\n",
@@ -985,10 +1033,10 @@
         "  video = open(filename,'rb').read()\n",
         "  b64 = base64.b64encode(video)\n",
         "  tag = '''\n",
-        "  \u003cvideo width=\"640\" height=\"480\" controls\u003e\n",
-        "    \u003csource src=\"data:video/mp4;base64,{0}\" type=\"video/mp4\"\u003e\n",
+        "  <video width=\"640\" height=\"480\" controls>\n",
+        "    <source src=\"data:video/mp4;base64,{0}\" type=\"video/mp4\">\n",
         "  Your browser does not support the video tag.\n",
-        "  \u003c/video\u003e'''.format(b64.decode())\n",
+        "  </video>'''.format(b64.decode())\n",
         "\n",
         "  return IPython.display.HTML(tag)"
       ]
@@ -1048,15 +1096,14 @@
   ],
   "metadata": {
     "colab": {
-      "collapsed_sections": [],
       "name": "DQN Tutorial.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "toc_visible": true
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
-      "language": "python",
       "name": "python3"
     },
     "pycharm": {
@@ -1067,7 +1114,8 @@
         },
         "source": []
       }
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
