翻译完成（100%） 1_dqn_tutorial.ipynb

--- a/docs/tutorials/1_dqn_tutorial.ipynb
+++ b/docs/tutorials/1_dqn_tutorial.ipynb
@@ -3,16 +3,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Supra-CN/agents/blob/master/docs/tutorials/1_dqn_tutorial.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "klGNgWREsvQv"
       },
       "source": [
@@ -489,7 +479,8 @@
         "# QNetwork consists of a sequence of Dense layers followed by a dense layer\n",
         "# with `num_actions` units to generate one q_value per available action as\n",
         "# its output.\n",
-        "# QNetwork 由一系列 Dense layers 组成，紧接着是一个带有 `num_actions` 单元的密集层，\n",
+        "# QNetwork 由一系列 Dense layers 组成，\n",
+        "# 紧接着是一个带有 `num_actions` 单元的 dense layer，\n",
         "# 为每个可用动作生成一个 q_value 作为其输出\n",
         "dense_layers = [dense_layer(num_units) for num_units in fc_layer_params]\n",
         "q_values_layer = tf.keras.layers.Dense(\n",
@@ -507,7 +498,8 @@
         "id": "z62u55hSmviJ"
       },
       "source": [
-        "Now use `tf_agents.agents.dqn.dqn_agent` to instantiate a `DqnAgent`. In addition to the `time_step_spec`, `action_spec` and the QNetwork, the agent constructor also requires an optimizer (in this case, `AdamOptimizer`), a loss function, and an integer step counter."
+        "Now use `tf_agents.agents.dqn.dqn_agent` to instantiate a `DqnAgent`. In addition to the `time_step_spec`, `action_spec` and the QNetwork, the agent constructor also requires an optimizer (in this case, `AdamOptimizer`), a loss function, and an integer step counter.\n",
+        "> 现在使用 `tf_agents.agents.dqn.dqn_agent` 实例化一个 `DqnAgent`。除了 `time_step_spec`、`action_spec` 和 QNetwork 之外，智能体构造器还需要一个优化器（在本例中为 AdamOptimizer）、一个损失函数和一个整数计步器。"
       ]
     },
     {
@@ -539,19 +531,26 @@
         "id": "I0KLrEPwkn5x"
       },
       "source": [
-        "## Policies\n",
+        "## Policies（策略）\n",
         "\n",
         "A policy defines the way an agent acts in an environment. Typically, the goal of reinforcement learning is to train the underlying model until the policy produces the desired outcome.\n",
+        "> 策略定义智能体在环境中的行为方式。通常，强化学习的目标是训练基础模型，直到策略产生预期的结果。\n",
         "\n",
         "In this tutorial:\n",
         "\n",
         "-   The desired outcome is keeping the pole balanced upright over the cart.\n",
         "-   The policy returns an action (left or right) for each `time_step` observation.\n",
+        "> 在本教程中：\n",
+        "> -   期望的结果是使杆在推车上方保持平衡。 \n",
+        "> -   该策略为每个 `time_step` 观察返回一个动作（左或右）。\n",
         "\n",
         "Agents contain two policies: \n",
         "\n",
         "-   `agent.policy` — The main policy that is used for evaluation and deployment.\n",
-        "-   `agent.collect_policy` — A second policy that is used for data collection.\n"
+        "-   `agent.collect_policy` — A second policy that is used for data collection.\n",
+        "> 智能体包含两个策略: \n",
+        "> -   `agent.policy` — 第一个是用来预测和部署的主要策略。\n",
+        "> -   `agent.collect_policy` — 第二个是用来做数据收集的。\n"
       ]
     },
     {
@@ -572,7 +571,8 @@
         "id": "2Qs1Fl3dV0ae"
       },
       "source": [
-        "Policies can be created independently of agents. For example, use `tf_agents.policies.random_tf_policy` to create a policy which will randomly select an action for each `time_step`."
+        "Policies can be created independently of agents. For example, use `tf_agents.policies.random_tf_policy` to create a policy which will randomly select an action for each `time_step`.\n",
+        "> 策略可以独立于智能体创建。例如，使用 `tf_agents.policies.random_tf_policy` 创建一个策略，该策略将为每个 `time_step` 随机选择一个动作。"
       ]
     },
     {
@@ -597,7 +597,11 @@
         "\n",
         "-   `action` — the action to be taken (in this case, `0` or `1`)\n",
         "-   `state` — used for stateful (that is, RNN-based) policies\n",
-        "-   `info` — auxiliary data, such as log probabilities of actions"
+        "-   `info` — auxiliary data, such as log probabilities of actions\n",
+        "> 调用 `policy.action(time_step)` 方法，可以从策略中获取一个动作。 `time_step` 包含来自环境的观察。此方法返回一个 `PolicyStep`，它是一个具有三个组件的命名元组：\n",
+        "> -   `action` — 要采取的动作（在本例中是 `0` 或 `1` ）\n",
+        "> -   `state` — 用于有状态（即基于 RNN 的）策略\n",
+        "> -   `info` — 辅助数据，例如动作的对数概率"
       ]
     },
     {
@@ -640,11 +644,13 @@
         "id": "94rCXQtbUbXv"
       },
       "source": [
-        "## Metrics and Evaluation\n",
+        "## Metrics and Evaluation（指标和评估）\n",
         "\n",
         "The most common metric used to evaluate a policy is the average return. The return is the sum of rewards obtained while running a policy in an environment for an episode. Several episodes are run, creating an average return.\n",
+        "> 用于评估政策的最常见指标是平均回报奖励。回报奖励是在一个情节的环境中运行策略时获得的奖励总和。运行几回合之后，计算得出一个平均回报奖励。\n",
         "\n",
-        "The following function computes the average return of a policy, given the policy, environment, and a number of episodes.\n"
+        "The following function computes the average return of a policy, given the policy, environment, and a number of episodes.\n",
+        "> 以下函数在给定策略、环境和多个回合的情况下计算策略的平均回报奖励。\n"
       ]
     },
     {
@@ -684,7 +690,8 @@
         "id": "_snCVvq5Z8lJ"
       },
       "source": [
-        "Running this computation on the `random_policy` shows a baseline performance in the environment."
+        "Running this computation on the `random_policy` shows a baseline performance in the environment.\n",
+        "> 在 `random_policy` 上运行此计算显示了环境中的基准性能。"
       ]
     },
     {
@@ -704,11 +711,13 @@
         "id": "NLva6g2jdWgr"
       },
       "source": [
-        "## Replay Buffer\n",
+        "## Replay Buffer（重播缓冲区）\n",
         "\n",
         "In order to keep track of the data collected from the environment, we will use [Reverb](https://deepmind.com/research/open-source/Reverb), an efficient, extensible, and easy-to-use replay system by Deepmind. It stores experience data when we collect trajectories and is consumed during training.\n",
+        "> 为了保持跟踪环境中产生的数据，我们需要用到 [Reverb](https://deepmind.com/research/open-source/Reverb), 这是 Deepmind 提供的一个高效、可扩展且易于使用的回放系统。它用于我们收集轨迹时存储经验数据，并在训练期间使用。\n",
         "\n",
-        "This replay buffer is constructed using specs describing the tensors that are to be stored, which can be obtained from the agent using agent.collect_data_spec.\n"
+        "This replay buffer is constructed using specs describing the tensors that are to be stored, which can be obtained from the agent using agent.collect_data_spec.\n",
+        "> 这个回放缓冲区是使用描述要存储的张量的规范构建的，可以使用 `agent.collect_data_spec` 从智能体对象中获得。"
       ]
     },
     {
@@ -753,7 +762,8 @@
         "id": "ZGNTDJpZs4NN"
       },
       "source": [
-        "For most agents, `collect_data_spec` is a named tuple called `Trajectory`, containing the specs for observations, actions, rewards, and other items."
+        "For most agents, `collect_data_spec` is a named tuple called `Trajectory`, containing the specs for observations, actions, rewards, and other items.\n",
+        "> 对于大多数智能体，`collect_data_spec` 是一个名为 `Trajectory` 的命名元组，包含观察、动作、奖励和其他项目的规范定义。"
       ]
     },
     {
@@ -784,11 +794,13 @@
         "id": "rVD5nQ9ZGo8_"
       },
       "source": [
-        "## Data Collection\n",
+        "## Data Collection（数据采集）\n",
         "\n",
         "Now execute the random policy in the environment for a few steps, recording the data in the replay buffer.\n",
+        "> 现在在环境中执行随机策略几步，将数据记录在重放缓冲区中。\n",
         "\n",
-        "Here we are using 'PyDriver' to run the experience collecting loop. You can learn more about TF Agents driver in our [drivers tutorial](https://www.tensorflow.org/agents/tutorials/4_drivers_tutorial)."
+        "Here we are using 'PyDriver' to run the experience collecting loop. You can learn more about TF Agents driver in our [drivers tutorial](https://www.tensorflow.org/agents/tutorials/4_drivers_tutorial).\n",
+        "> 在这里，我们使用 `PyDriver` 来运行经验收集循环。您可以在我们的驱动程序教程[drivers tutorial](https://www.tensorflow.org/agents/tutorials/4_drivers_tutorial)中了解有关 TF Agents 驱动程序的更多信息。"
       ]
     },
     {
@@ -814,7 +826,8 @@
         "id": "84z5pQJdoKxo"
       },
       "source": [
-        "The replay buffer is now a collection of Trajectories."
+        "The replay buffer is now a collection of Trajectories.\n",
+        "> 重播缓冲区现在是轨迹的集合。"
       ]
     },
     {
@@ -827,6 +840,8 @@
       "source": [
         "# For the curious:\n",
         "# Uncomment to peel one of these off and inspect it.\n",
+        "# 如果对他感兴趣：\n",
+        "# 可以取消下面这行的注释来观察他\n",
         "# iter(replay_buffer.as_dataset()).next()"
       ]
     },
@@ -837,10 +852,13 @@
       },
       "source": [
         "The agent needs access to the replay buffer. This is provided by creating an iterable `tf.data.Dataset` pipeline which will feed data to the agent.\n",
+        "> 智能体需要通过创建一个可迭代的 `tf.data.Dataset` 管道来访问重播缓冲区，该管道将向代理提供数据。\n",
         "\n",
         "Each row of the replay buffer only stores a single observation step. But since the DQN Agent needs both the current and next observation to compute the loss, the dataset pipeline will sample two adjacent rows for each item in the batch (`num_steps=2`).\n",
+        "> 回放缓冲区的每一行只存储一个观察步骤。但是由于 DQN 代理需要当前和下一个观察来计算损失，因此数据集管道将为批次中的每个项目采样两个相邻的行 `(num_steps=2)`。\n",
         "\n",
-        "This dataset is also optimized by running parallel calls and prefetching data."
+        "This dataset is also optimized by running parallel calls and prefetching data.\n",
+        "> 该数据集还通过运行并行调用和预取数据进行了优化。"
       ]
     },
     {
@@ -884,6 +902,9 @@
         "# Uncomment to see what the dataset iterator is feeding to the agent.\n",
         "# Compare this representation of replay data \n",
         "# to the collection of individual trajectories shown earlier.\n",
+        "# 如果对他感兴趣：\n",
+        "# 取消注释以查看数据集迭代器向代理提供的内容。\n",
+        "# 将重放数据的这种表示与前面显示的单个轨迹的集合进行比较。\n",
         "\n",
         "# iterator.next()"
       ]
@@ -894,16 +915,21 @@
         "id": "hBc9lj9VWWtZ"
       },
       "source": [
-        "## Training the agent\n",
+        "## Training the agent（训练智能体）\n",
         "\n",
         "Two things must happen during the training loop:\n",
         "\n",
         "-   collect data from the environment\n",
         "-   use that data to train the agent's neural network(s)\n",
+        "> 在训练循环中必须发生两件事:\n",
+        "> -   从环境中收集数据\n",
+        "> -   使用该数据来训练智能体的神经网络\n",
         "\n",
         "This example also periodicially evaluates the policy and prints the current score.\n",
+        "> 此示例同时还定期评估策略并打印当前分数。\n",
         "\n",
-        "The following will take ~5 minutes to run."
+        "The following will take ~5 minutes to run.\n",
+        "> 下面的运行过程可能需要大约 5 分钟"
       ]
     },
     {
@@ -921,19 +947,24 @@
         "  pass\n",
         "\n",
         "# (Optional) Optimize by wrapping some of the code in a graph using TF function.\n",
+        "# (可选) 通过使用 TF 函数将一些代码包装在图形中进行优化。\n",
         "agent.train = common.function(agent.train)\n",
         "\n",
         "# Reset the train step.\n",
+        "# 重置训练步数\n",
         "agent.train_step_counter.assign(0)\n",
         "\n",
         "# Evaluate the agent's policy once before training.\n",
+        "# 在训练前先对智能体的策略进行一次评估。\n",
         "avg_return = compute_avg_return(eval_env, agent.policy, num_eval_episodes)\n",
         "returns = [avg_return]\n",
         "\n",
         "# Reset the environment.\n",
+        "# 重置环境\n",
         "time_step = train_py_env.reset()\n",
         "\n",
         "# Create a driver to collect experience.\n",
+        "# 创建一个 driver 来采集经验\n",
         "collect_driver = py_driver.PyDriver(\n",
         "    env,\n",
         "    py_tf_eager_policy.PyTFEagerPolicy(\n",
@@ -944,9 +975,11 @@
         "for _ in range(num_iterations):\n",
         "\n",
         "  # Collect a few steps and save to the replay buffer.\n",
+        "  # 采集几步并保存到经验缓冲区\n",
         "  time_step, _ = collect_driver.run(time_step)\n",
         "\n",
         "  # Sample a batch of data from the buffer and update the agent's network.\n",
+        "  # 从缓冲区中采样一批数据并更新智能体的神经网络。\n",
         "  experience, unused_info = next(iterator)\n",
         "  train_loss = agent.train(experience).loss\n",
         "\n",
@@ -967,7 +1000,7 @@
         "id": "68jNcA_TiJDq"
       },
       "source": [
-        "## Visualization\n"
+        "## Visualization（可视化）\n"
       ]
     },
     {
@@ -976,11 +1009,13 @@
         "id": "aO-LWCdbbOIC"
       },
       "source": [
-        "### Plots\n",
+        "### Plots（制图）\n",
         "\n",
         "Use `matplotlib.pyplot` to chart how the policy improved during training.\n",
+        "> 使用 `matplotlib.pyplot` 绘制策略在训练期间如何改进的图表。\n",
         "\n",
-        "One iteration of `Cartpole-v0` consists of 200 time steps. The environment gives a reward of `+1` for each step the pole stays up, so the maximum return for one episode is 200. The charts shows the return increasing towards that maximum each time it is evaluated during training. (It may be a little unstable and not increase monotonically each time.)"
+        "One iteration of `Cartpole-v0` consists of 200 time steps. The environment gives a reward of `+1` for each step the pole stays up, so the maximum return for one episode is 200. The charts shows the return increasing towards that maximum each time it is evaluated during training. (It may be a little unstable and not increase monotonically each time.)\n",
+        "> `Cartpole-v0` 的一次迭代包含 200 个时间步长。环境给杆子撑起的每一步奖励 `+1`，所以一集的最大奖励是200，图表显示每次在训练期间对其进行评估时，回报都会朝着该最大值增加。（可能有点不稳定，不是每次都单调递增。）"
       ]
     },
     {
@@ -1006,7 +1041,7 @@
         "id": "M7-XpPP99Cy7"
       },
       "source": [
-        "### Videos"
+        "### Videos（视频）"
       ]
     },
     {
@@ -1016,8 +1051,10 @@
       },
       "source": [
         "Charts are nice. But more exciting is seeing an agent actually performing a task in an environment. \n",
+        "> 图表很好。但更令人兴奋的是看到代理在环境中实际执行任务。\n",
         "\n",
-        "First, create a function to embed videos in the notebook."
+        "First, create a function to embed videos in the notebook.\n",
+        "> 首先，创建一个在笔记本中嵌入视频的功能。"
       ]
     },
     {
@@ -1047,7 +1084,8 @@
         "id": "9c_PH-pX4Pr5"
       },
       "source": [
-        "Now iterate through a few episodes of the Cartpole game with the agent. The underlying Python environment (the one \"inside\" the TensorFlow environment wrapper) provides a `render()` method, which outputs an image of the environment state. These can be collected into a video."
+        "Now iterate through a few episodes of the Cartpole game with the agent. The underlying Python environment (the one \"inside\" the TensorFlow environment wrapper) provides a `render()` method, which outputs an image of the environment state. These can be collected into a video.\n",
+        "> 现在与代理一起迭代 Cartpole 游戏的几集。底层 Python 环境（TensorFlow 环境包装器“内部”）提供了一个 `render()` 方法，它输出环境状态的图像。这些可以收集到视频中。"
       ]
     },
     {
@@ -1079,7 +1117,8 @@
         "id": "povaAOcZygLw"
       },
       "source": [
-        "For fun, compare the trained agent (above) to an agent moving randomly. (It does not do as well.)"
+        "For fun, compare the trained agent (above) to an agent moving randomly. (It does not do as well.)\n",
+        "> 为了好玩，将训练有素的代理人（上图）与随机移动的代理人进行比较。 （它并没有那么好。）"
       ]
     },
     {
@@ -1099,8 +1138,7 @@
       "name": "DQN Tutorial.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Python 3",
